fixed background url location

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("/images/7012024.jpg");
+  background: url(".../images/7012024.jpg");
   background-size: cover;
   font-family: "Roboto", sans-serif;
   background-color: #3f72af;
